--- a/languages/fr_FR.po
+++ b/languages/fr_FR.po
@@ -1,17 +1,17 @@
-#, fuzzy
 msgid ""
 msgstr ""
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 "Project-Id-Version: WPbred Examples\n"
-"POT-Creation-Date: 2021-07-19 14:43+0530\n"
-"PO-Revision-Date: 2021-07-19 14:43+0530\n"
+"POT-Creation-Date: 2021-07-19 14:46+0530\n"
+"PO-Revision-Date: 2021-07-19 14:48+0530\n"
 "Last-Translator: \n"
 "Language-Team: \n"
+"Language: fr_FR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 2.4.3\n"
 "X-Poedit-Basepath: ..\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: wpbred-examples.php\n"
 "X-Poedit-SourceCharset: UTF-8\n"
@@ -31,7 +31,7 @@ msgstr ""
 
 #: admin/class-wpbred-examples-admin.php:77
 msgid "Settings updated"
-msgstr ""
+msgstr "Paramètres mis à jour"
 
 #: admin/class-wpbred-examples-admin.php:95
 msgid "WP Bred Demo Settings"
@@ -39,19 +39,19 @@ msgstr ""
 
 #: admin/class-wpbred-examples-admin.php:101
 msgid "Minimum Width"
-msgstr ""
+msgstr "Largeur minimale"
 
 #: admin/class-wpbred-examples-admin.php:105
 msgid "Minimum width"
-msgstr ""
+msgstr "Largeur mini"
 
 #: admin/class-wpbred-examples-admin.php:111
 msgid "Maximum Width"
-msgstr ""
+msgstr "Largeur maximale"
 
 #: admin/class-wpbred-examples-admin.php:115
 msgid "Maximum width"
-msgstr ""
+msgstr "Largeur maximum"
 
 #: admin/class-wpbred-examples-admin.php:130
 msgid "Ideal image dimension should be 1920x1080 px."
@@ -59,7 +59,7 @@ msgstr ""
 
 #: admin/partials/wpbred-examples-admin-settings.php:20
 msgid "Save Settings"
-msgstr ""
+msgstr "Enregistrer les paramètres"
 
 #. Plugin Name of the plugin/theme
 msgid "WPbred Examples"
