--- a/languages/hi_IN.po
+++ b/languages/hi_IN.po
@@ -1,11 +1,9 @@
-#, fuzzy
 msgid ""
 msgstr ""
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+"Plural-Forms: nplurals=2; plural=(n==0 || n==1);\n"
 "Project-Id-Version: WPbred Examples\n"
 "POT-Creation-Date: 2021-07-19 14:43+0530\n"
-"PO-Revision-Date: 2021-07-19 14:43+0530\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-07-19 14:50+0530\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,66 +16,69 @@ msgstr ""
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
 "esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"Last-Translator: \n"
+"Language: hi_IN\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.min.js\n"
 
 #: admin/class-wpbred-examples-admin.php:55
 msgid "WPB Example"
-msgstr ""
+msgstr "WPB उदाहरण"
 
 #: admin/class-wpbred-examples-admin.php:56
 msgid "WPB Settings"
-msgstr ""
+msgstr "WPB सेटिंग्स"
 
 #: admin/class-wpbred-examples-admin.php:77
 msgid "Settings updated"
-msgstr ""
+msgstr "सेटिंग्स अपडेट की गईं"
 
 #: admin/class-wpbred-examples-admin.php:95
 msgid "WP Bred Demo Settings"
-msgstr ""
+msgstr "WP नस्ल डेमो सेटिंग्स"
 
 #: admin/class-wpbred-examples-admin.php:101
 msgid "Minimum Width"
-msgstr ""
+msgstr "न्यूनतम चौड़ाई"
 
 #: admin/class-wpbred-examples-admin.php:105
 msgid "Minimum width"
-msgstr ""
+msgstr "न्यूनतम चौड़ाई"
 
 #: admin/class-wpbred-examples-admin.php:111
 msgid "Maximum Width"
-msgstr ""
+msgstr "अधिकतम चौड़ाई"
 
 #: admin/class-wpbred-examples-admin.php:115
 msgid "Maximum width"
-msgstr ""
+msgstr "अधिकतम चौड़ाई"
 
 #: admin/class-wpbred-examples-admin.php:130
 msgid "Ideal image dimension should be 1920x1080 px."
-msgstr ""
+msgstr "आदर्श छवि आयाम 1920x1080 px होना चाहिए।"
 
 #: admin/partials/wpbred-examples-admin-settings.php:20
 msgid "Save Settings"
-msgstr ""
+msgstr "सेव सेटिंग्स"
 
 #. Plugin Name of the plugin/theme
 msgid "WPbred Examples"
-msgstr ""
+msgstr "WPbred उदाहरण"
 
 #. Plugin URI of the plugin/theme
 msgid "https://www.bpbred.com/plugins/wpbred-examples"
-msgstr ""
+msgstr "https://www.bpbred.com/plugins/wpbred-examples"
 
 #. Description of the plugin/theme
 msgid ""
 "This plugin contains examples of the custom functions that can be added in a "
 "WordPress Plugin."
 msgstr ""
+"इस प्लगइन में कस्टम कार्यों के उदाहरण शामिल हैं जिन्हें वर्डप्रेस प्लगइन में जोड़ा जा सकता है।"
 
 #. Author of the plugin/theme
 msgid "WPbred.com Team"
-msgstr ""
+msgstr "WPbred.com टीम"
 
 #. Author URI of the plugin/theme
 msgid "https://www.bpbred.com/"
