--- a/languages/nb_NO.po
+++ b/languages/nb_NO.po
@@ -1,11 +1,9 @@
-#, fuzzy
 msgid ""
 msgstr ""
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Project-Id-Version: WPbred Examples\n"
 "POT-Creation-Date: 2021-07-19 14:43+0530\n"
-"PO-Revision-Date: 2021-07-19 14:43+0530\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-07-19 14:45+0530\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,6 +16,8 @@ msgstr ""
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
 "esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"Last-Translator: \n"
+"Language: nb_NO\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.min.js\n"
 
@@ -47,7 +47,7 @@ msgstr ""
 
 #: admin/class-wpbred-examples-admin.php:111
 msgid "Maximum Width"
-msgstr ""
+msgstr "Maksimal bredde"
 
 #: admin/class-wpbred-examples-admin.php:115
 msgid "Maximum width"
@@ -59,7 +59,7 @@ msgstr ""
 
 #: admin/partials/wpbred-examples-admin-settings.php:20
 msgid "Save Settings"
-msgstr ""
+msgstr "Lagre innstillinger"
 
 #. Plugin Name of the plugin/theme
 msgid "WPbred Examples"
