--- a/languages/hi_IN.po
+++ b/languages/hi_IN.po
@@ -1,23 +1,23 @@
 msgid ""
 msgstr ""
-"Plural-Forms: nplurals=2; plural=(n==0 || n==1);\n"
 "Project-Id-Version: WPbred Examples\n"
-"POT-Creation-Date: 2021-07-19 14:43+0530\n"
-"PO-Revision-Date: 2021-07-19 14:50+0530\n"
+"POT-Creation-Date: 2021-07-19 15:06+0530\n"
+"PO-Revision-Date: 2021-07-19 15:06+0530\n"
+"Last-Translator: \n"
 "Language-Team: \n"
+"Language: hi_IN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n==0 || n==1);\n"
 "X-Generator: Poedit 2.4.3\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: wpbred-examples.php\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
-"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
-"_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
-"Last-Translator: \n"
-"Language: hi_IN\n"
+"X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;esc_attr_e;"
+"esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;_nx_noop:3c,1,2;"
+"__ngettext_noop:1,2\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.min.js\n"
 
@@ -66,20 +66,18 @@ msgid "WPbred Examples"
 msgstr "WPbred उदाहरण"
 
 #. Plugin URI of the plugin/theme
-msgid "https://www.bpbred.com/plugins/wpbred-examples"
-msgstr "https://www.bpbred.com/plugins/wpbred-examples"
+msgid "https://www.wpbred.com/plugins/wpbred-examples"
+msgstr ""
 
 #. Description of the plugin/theme
 msgid ""
-"This plugin contains examples of the custom functions that can be added in a "
-"WordPress Plugin."
-msgstr ""
-"इस प्लगइन में कस्टम कार्यों के उदाहरण शामिल हैं जिन्हें वर्डप्रेस प्लगइन में जोड़ा जा सकता है।"
+"This plugin contains examples of the custom functions that can be added in a WordPress Plugin."
+msgstr "इस प्लगइन में कस्टम कार्यों के उदाहरण शामिल हैं जिन्हें वर्डप्रेस प्लगइन में जोड़ा जा सकता है।"
 
 #. Author of the plugin/theme
 msgid "WPbred.com Team"
 msgstr "WPbred.com टीम"
 
 #. Author URI of the plugin/theme
-msgid "https://www.bpbred.com/"
+msgid "https://www.wpbred.com/"
 msgstr ""
