--- a/languages/wpbred-examples.pot
+++ b/languages/wpbred-examples.pot
@@ -66,7 +66,7 @@ msgid "WPbred Examples"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
-msgid "https://www.bpbred.com/plugins/wpbred-examples"
+msgid "https://www.wpbred.com/plugins/wpbred-examples"
 msgstr ""
 
 #. Description of the plugin/theme
@@ -80,5 +80,5 @@ msgid "WPbred.com Team"
 msgstr ""
 
 #. Author URI of the plugin/theme
-msgid "https://www.bpbred.com/"
+msgid "https://www.wpbred.com/"
 msgstr ""
